# rgba2ppm

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
src/: Makefile.am  rgba2ppm.c  rgba_to_rgb.c  rgba_to_rgb.h
tests/: Makefile.am  sample1.ppm  sample1.rgba  test-sample-1.sh
