
AC_INIT(rgba2ppm, [0.93], [lvecsey-rgba2ppm@phrasep.com])

AC_PREREQ(2.59)

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AC_PROG_CC

AC_PROG_RANLIB

AM_INIT_AUTOMAKE

AC_PROG_INSTALL

AM_PROG_CC_C_O

AC_CONFIG_SRCDIR([src/rgba2ppm.c])

AC_SUBST(SRCDIR, $srcdir)

AC_CONFIG_FILES([src/Makefile Makefile tests/Makefile])

AC_OUTPUT

